# neo4j

./: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
dags/: bronze_dag.py  gold_dag.py  silver_dag_layer.py
queries/: query1.cypher  query2.cypher  query3.cypher  query4.cypher  query5.cypher  query6.cypher
scripts/: load_gold_neo4j.py  load_raw_neo4j.py  load_silver_neo4j.py
tests/: README_TESTS.MD  configtest.py  requirements.txt  run_tests.sh  test_load_raw.py  teste_integration.py
